    (CVE-2011-1148)
  . Fixed bug #54180 (parse_url() incorrectly parses path when ? in fragment).
    (tomas dot brastavicius at quantum dot lt, Pierrick)
  . Fixed bug #48465 (sys_get_temp_dir() possibly inconsistent when using 
    TMPDIR on Windows). (Pierre)

- cURL
  . Added CURLINFO_REDIRECT_URL support. (Daniel Stenberg, Pierre)

- DateTime extension:
  . Fixed bug #54340 (DateTime::add() method bug). (Adam)
  . Fixed bug #54316 (DateTime::createFromFormat does not handle trailing '|'
    correctly). (Adam)
  . Fixed bug #54283 (new DatePeriod(NULL) causes crash). (Felipe)

- DBA extension:
  . Fixed bug #54242 (dba_insert returns true if key already exists). (Felipe)

- Exif extesion:
  . Fixed bug #54121 (error message format string typo). (Ilia)

- Filter extension:
  . Added 3rd parameter to filter_var_array() and filter_input_array()
    functions that allows disabling addition of empty elements. (Ilia)
  . Fixed bug #53037 (FILTER_FLAG_EMPTY_STRING_NULL is not implemented). (Ilia)
  
- intl extension:
  . Implemented FR #54540 (Allow loading of arbitrary resource bundles when
    fallback is disabled). (David Zuelke, Stas)

- LDAP extension:
  . Fixed bug #53339 (Fails to build when compilng with gcc 4.5 and DSO
    libraries). (Clint Byrum, Raphael)

- libxml extension:
  . Fixed bug #54440 (libxml extension ignores default context). (Gustavo)

- mbstring extension:
  . Fixed bug #54494 (mb_substr() mishandles UTF-32LE and UCS-2LE). (Gustavo)

- MySQL Improved extension:
  . Fixed Bug #54221 (mysqli::get_warnings segfault when used in multi queries).
    (Andrey)

- mysqlnd
  . Fixed crash when using more than 28,000 bound parameters. Workaround is to
    set mysqlnd.net_cmd_buffer_size to at least 9000. (Andrey)
    
- PDO DBlib driver:
  . Fixed bug #54167 (PDO_DBLIB returns null on SQLUNIQUE field).
    (mjh at hodginsmedia dot com, Felipe)

- PDO MySQL driver:
  . Implemented FR #48587 (MySQL PDO driver doesn't support SSL connections).
    (Rob)